examples/test/testpolicy8198.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8198
  namespace: namespace85
spec:
  podSelector:
    matchLabels:
      key42: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value3
          key38: value35
      podSelector:
        matchLabels:
          key39: value6
          key34: value17
